--- a/SESComponents.dproj
+++ b/SESComponents.dproj
@@ -8,7 +8,7 @@
         <AppType>Package</AppType>
         <FrameworkType>VCL</FrameworkType>
         <ProjectVersion>15.3</ProjectVersion>
-        <Platform Condition="'$(Platform)'==''">Win64</Platform>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
         <Base>true</Base>
@@ -149,6 +149,7 @@
         <DCCReference Include="TVicLib.pas"/>
         <DCCReference Include="AndorSDK3Unit.pas"/>
         <DCCReference Include="HekaUnit.pas"/>
+        <DCCReference Include="ThorLabsUnit.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
