--- a/SESComponents.dproj
+++ b/SESComponents.dproj
@@ -150,6 +150,7 @@
         <DCCReference Include="AndorSDK3Unit.pas"/>
         <DCCReference Include="HekaUnit.pas"/>
         <DCCReference Include="ThorLabsUnit.pas"/>
+        <DCCReference Include="dd1550.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
