--- a/SESComponents.dproj
+++ b/SESComponents.dproj
@@ -93,6 +93,7 @@
         <DCCReference Include="HTMLLabel.dcr"/>
         <DCCReference Include="IDRFile.dcr"/>
         <DCCReference Include="ImageFile.dcr"/>
+        <DCCReference Include="I:\Science\SIPBS\Dempster\My Documents\RAD Studio\10.0\Imports\MG17MotorLib_TLB.dcr"/>
         <DCCReference Include="vcl.dcp"/>
         <DCCReference Include="rtl.dcp"/>
         <DCCReference Include="vclie.dcp"/>
@@ -151,6 +152,7 @@
         <DCCReference Include="HekaUnit.pas"/>
         <DCCReference Include="ThorLabsUnit.pas"/>
         <DCCReference Include="dd1550.pas"/>
+        <DCCReference Include="I:\Science\SIPBS\Dempster\My Documents\RAD Studio\10.0\Imports\MG17MotorLib_TLB.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
