--- a/SESComponents.dproj
+++ b/SESComponents.dproj
@@ -152,6 +152,7 @@
         <DCCReference Include="HekaUnit.pas"/>
         <DCCReference Include="ThorLabsUnit.pas"/>
         <DCCReference Include="dd1550.pas"/>
+        <DCCReference Include="dd1550A.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
