--- a/SESComponents.dproj
+++ b/SESComponents.dproj
@@ -113,7 +113,7 @@
         <DCCReference Include="ImageFile.pas"/>
         <DCCReference Include="ADCDataFile.pas"/>
         <DCCReference Include="vp500Unit.pas"/>
-        <DCCReference Include="NidaqMXUnit.pas"/>
+        <DCCReference Include="nidaqmxunit.pas"/>
         <DCCReference Include="dd1200win98.pas"/>
         <DCCReference Include="dd1200.pas"/>
         <DCCReference Include="dd1320.pas"/>
@@ -154,6 +154,7 @@
         <DCCReference Include="dd1550.pas"/>
         <DCCReference Include="dd1550A.pas"/>
         <DCCReference Include="dd1550B.pas"/>
+        <DCCReference Include="MCCUnit.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
