--- a/SESComponents.dproj
+++ b/SESComponents.dproj
@@ -8,7 +8,7 @@
         <AppType>Package</AppType>
         <FrameworkType>VCL</FrameworkType>
         <ProjectVersion>17.2</ProjectVersion>
-        <Platform Condition="'$(Platform)'==''">Win32</Platform>
+        <Platform Condition="'$(Platform)'==''">Win64</Platform>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
         <Base>true</Base>
@@ -155,6 +155,7 @@
         <DCCReference Include="dd1550A.pas"/>
         <DCCReference Include="dd1550B.pas"/>
         <DCCReference Include="MCCUnit.pas"/>
+        <DCCReference Include="PCOUnit.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
